feat(delivery-dispatch/instant/seq): add segment serialization for DDB rw